versioned_docs/version-2025.2.1/professor/octavio_henrique_viana.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Octavio Henrique Viana",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Desenho Técnico e Topografia - 469",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "AGO2025 - Grupo A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Desenho Técnico e Topografia - 469",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "AGO2025 - Grupo B"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Topografia e Geoprocessamento - 1467",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Mecanização Agrícola, Irrigação e Drenagem - 1096",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Elias Franco"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Meteorologia e Bioclimatologia na Agropecuária - 631",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Irrigação e Drenagem - 2216",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Elias Franco"
          ],
          "classroom": "sala_6-2",
          "students": [
            "AGR2024"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Octavio Henrique Viana

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
